fix button wraps

--- a/src/styles/elements/button/button.sass
+++ b/src/styles/elements/button/button.sass
@@ -38,7 +38,9 @@
 .buttons
   +flex(row wrap, flex-start, flex-start)
   margin: -10px
-  & > *
+  & > div > *
+    margin: 10px
+  &  .desktop_only.button
     margin: 10px
 
 .buttons_container
