--- a/src/styles/layout/header/media.sass
+++ b/src/styles/layout/header/media.sass
@@ -1,6 +1,15 @@
 @media (max-width: 1100px)
   .header
     align-items: flex-start
+    .buttons
+      flex-direction: column-reverse
+      align-items: flex-end!important
+      .connect__value
+        margin-top: 10px!important
+        margin-bottom: 20px!important
+      & > div .button
+        margin: 5px
+
     &__main
       display: grid
       grid-gap: 10px
